@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix for bug #3536508: Broken firewall with missile swarm.
+Nicolas Weeger 2012-07-01
+
 Modify handle_client() to process more than one socket command per tick.
 This chops about half a second off time spent in negotiate_connection()
 on local client/server - probably bigger difference for remote servers.
